<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Merchant</string>
	<string name="hello">Hello</string>
	<string name="register_at">Register at</string>
	<string name="email_or_password_cannot_be_blank">Email or password cannot be blank</string>
	<string name="ok">OK</string>
	<string name="email">Email</string>
	<string name="wrong_email_or_password">Wrong email or password</string>
	<string name="password">Password</string>
	<string name="signing_in">Signing in...</string>
	<string name="please_check_your_network_connection">Please check your network connection</string>
	<string name="logout">Log out</string>
	<string name="no_offers">No offers</string>
	<string name="locate">Locate</string>
	<string name="get_direction">Get Direction</string>
	<string name="loading">Loading...</string>
	<string name="none">none</string>
	<string name="account_not_found">Account not found. Would you like to register?
	</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="login">Login</string>
	<string name="register">Sign up</string>
	<string name="add_recipients">Add recipients</string>
	<string name="to">To</string>
	<string name="personal_messages">Personal Messages</string>
	<string name="messages">Messages</string>
	<string name="forward_to_friends">Forward to friends (+10 points)</string>
	<string name="browse">Browse</string>
	<string name="forward">Forward</string>
	<string name="successfully_forwarded">Successfully forwarded.</string>
	<string name="successfully_rated">Successfully rated</string>
	<string name="failed_to_rate">Failed to rate. Please try again later</string>
	<string name="phone">Phone</string>
	<string name="zipcode">Zipcode</string>
	<string name="sign_up">Sign up</string>
	<string name="unsuccessfully_forwarded">Unsuccessfully forwarded. Please try again later.
	</string>
	<string name="business_email_password_phone_zipcode_cannot_be_blank">Business or email or password or phone or zipcode
		cannot be blank.
	</string>
	<string name="registering">Registering...</string>
	<string name="successfully_registered">Successfully registered.</string>
	<string name="registration_failed">Registration failed.</string>
	<string name="registration_failed_please_try_again_later">Registration failed. Please try again later.
	</string>
	<string name="offer_code_total_paid_cannot_be_blank">Offer code or total paid cannot be blank.</string>
	<string name="redeeming">Redeeming...</string>
	<string name="successfully_redeemed">Successfully redeemed.</string>
	<string name="error_occured_please_try_again_later">An error occured. Please try again later</string>
	<string name="successfully_submitted">Successfully submitted</string>
	<string name="submitting_new_offer">Submitting new offer...</string>
	<string name="title_description_cannot_be_blank">Title or description cannot be blank.</string>
	<string name="cancel">Cancel</string>
</resources>